<resources>
    <string name="app_name">PharmaGuard</string>
    <string name="logout">Logout</string>
    <string name="facebook_app_id">381752510400728</string>
    <string name="fb_login_protocol_scheme">fb381752510400728</string>
    <string name="History">History</string>
    <string name="Home">Home</string>
    <string name="Logout">Logout</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="report">Report</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Sign up to get started</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone">Phone number</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_google_signin">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="dashboard_title">PharmaGuard</string>
    <string name="welcome_user">Welcome</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_desc">Verify medicine via barcode</string>
    <string name="scan_photo">Scan Medicine Photo</string>
    <string name="scan_photo_desc">AI-powered image analysis</string>
    <string name="scan_history">Scan History</string>
    <string name="scan_history_desc">View past scan results</string>
    <string name="report_counterfeit">Report Counterfeit</string>
    <string name="report_counterfeit_desc">Report fake medicine</string>
    <string name="add_medicine_title">Add Medicine</string>
    <string name="medicine_detail_title">Medicine Details</string>
    <string name="status_verified">Verified</string>
    <string name="status_not_found">Not Found</string>
    <string name="status_counterfeit">Potential Counterfeit</string>
    <string name="status_expired">EXPIRED - Do not use</string>
    <string name="status_expiring">Expiring Soon</string>
    <string name="report_title">Report Counterfeit Medicine</string>
    <string name="report_submitted">Report submitted successfully</string>
</resources>
